Show text of sidebar icon on hover :ok_hand:

--- a/ac-front-end/src/styles/AgentMain/AmazonConnect.css
+++ b/ac-front-end/src/styles/AgentMain/AmazonConnect.css
@@ -7,14 +7,14 @@
 }
 
 .ac-title {
-  font-size: 4rem;
+  font-size: var(--sub-title);
   font-weight: bold;
   margin: 2rem;
   text-align: center;
 }
 
 .ac-main-container {
-  width: 40rem;
+  width: 45rem;
   background-color: var(--sub-card-background);
   color: var(--text-color);
   border-radius: 10px;
