--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -1,7 +1,7 @@
 /*Initials: tp*/
 
 .tp-main-container {
-  width: 40rem;
+  width: 35rem;
   background-color: var(--sub-card-background);
   color: var(--text-color);
   border-radius: 10px;
@@ -12,7 +12,7 @@
   align-items: center;
 }
 .tp-title {
-  font-size: 4rem;
+  font-size: var(--sub-title);
   font-weight: bold;
   margin: 2rem;
   text-align: center;
