--- a/ac-front-end/src/styles/Profile/Profile.css
+++ b/ac-front-end/src/styles/Profile/Profile.css
@@ -5,11 +5,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 95vh;
-  background-color: var(--main-card-background);
-  margin: 2rem;
+  height: 85vh;
+  margin: 1rem 2rem 2rem 100px;
   border-radius: 10px;
   color: var(--text-color);
+  background-color: var(--main-card-background);
 }
 .prfl-sub-container {
   display: flex;
