--- a/ac-front-end/src/styles/Login/NewPasswordForm.css
+++ b/ac-front-end/src/styles/Login/NewPasswordForm.css
@@ -1,6 +1,6 @@
-/* Initials: fpf */
+/* Initials: npf */
 
-.fpf-input {
+.npf-input {
   display: block;
   padding: 0.6rem 0.6rem 0.6rem 1.2rem;
   border: none;
@@ -8,10 +8,10 @@
   border-radius: 9px;
 }
 
-.fpf-button {
+.npf-button {
   font-size: 2rem;
   font-weight: bold;
-  padding: 0.6rem;
+  padding: 1rem;
   background-color: var(--highlight-color);
   color: var(--text-color);
   margin-top: 2rem;
@@ -20,43 +20,44 @@
   cursor: pointer;
 }
 
-.fpf-label {
+.npf-label {
   font-size: 2rem;
   font-weight: bold;
 }
 
 /* Classes */
-.fpf-main-container {
+.npf-main-container {
   width: 40rem;
   background-color: var(--sub-card-background);
   color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
+  min-height: 35rem;
 }
 
-.fpf-container {
+.npf-container {
   padding: 3rem;
 }
 
-.fpf-form {
+.npf-form {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
 }
 
-.fpf-form-title {
-  font-size: 3rem;
+.npf-form-title {
+  font-size: 4rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
-.fpf-flex {
+.npf-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.fpf-forgot-text {
+.npf-forgot-text {
   align-self: flex-end;
   margin-bottom: 0.8rem;
   font-size: 1.2rem;
@@ -64,18 +65,18 @@
   text-decoration: none;
 }
 
-.fpf-margin-bottom-sm {
+.npf-margin-bottom-sm {
   margin-bottom: 0.6rem;
 }
 
-.fpf-margin-top-sm {
+.npf-margin-top-sm {
   margin-top: 0.6rem;
 }
 
-.fpf-margin-top-md {
+.npf-margin-top-md {
   margin-top: 1.2rem;
 }
 
-.fpf-margin-top-lg {
+.npf-margin-top-lg {
   margin-top: 4rem;
 }
