--- a/ac-front-end/src/styles/Recordings/Recordings.css
+++ b/ac-front-end/src/styles/Recordings/Recordings.css
@@ -8,6 +8,7 @@
   background-color: var(--main-card-background);
   margin: 1rem 2rem 2rem 100px;
   border-radius: 10px;
+  min-height: 85vh;
 }
 
 .re-container {
