--- a/ac-front-end/src/styles/Login/ForgottenPasswordForm.css
+++ b/ac-front-end/src/styles/Login/ForgottenPasswordForm.css
@@ -11,7 +11,7 @@
 .fpf-button {
   font-size: 2rem;
   font-weight: bold;
-  padding: 0.6rem;
+  padding: 1rem;
   background-color: var(--highlight-color);
   color: var(--text-color);
   margin-top: 2rem;
@@ -27,11 +27,16 @@
 
 /* Classes */
 .fpf-main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   width: 40rem;
   background-color: var(--sub-card-background);
   color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
+  min-height: 35rem;
 }
 
 .fpf-container {
@@ -45,9 +50,9 @@
 }
 
 .fpf-form-title {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .fpf-flex {
