--- a/ac-front-end/src/styles/Recordings/GiveFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/GiveFeedbackCard.css
@@ -32,6 +32,7 @@
 
 .gfc-title:nth-child(1) {
   color: #9facbd;
+  cursor: pointer;
 }
 
 .gfc-container h3 {
@@ -68,4 +69,5 @@
   cursor: pointer;
   color: #e1e1e1;
   margin-top: 1rem;
+  border: none;
 }
