--- a/ac-front-end/src/styles/AgentMain/AmazonConnect.css
+++ b/ac-front-end/src/styles/AgentMain/AmazonConnect.css
@@ -21,3 +21,8 @@
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
   min-height: 65rem;
 }
+.ac-viewer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
