--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -1,3 +1,8 @@
+/* CSS of Index
+Authors:
+        A01777771 Stephen Strange*/
+
+
 /* Import Amazon Ember Font*/
 @import url("https://cdn.jsdelivr.net/gh/GoCloudHub/font-amazon-ember/fonts/amazonember/amazonember.css");
 
