--- a/ac-front-end/src/styles/AgentList/AgentListSwitch.css
+++ b/ac-front-end/src/styles/AgentList/AgentListSwitch.css
@@ -1,3 +1,6 @@
+/* CSS of AgentListSwitch
+Authors:
+        A01777771 Stephen Strange*/
 .al-switch {
   position: relative;
   display: inline-block;
