--- a/ac-front-end/src/styles/Login/RecoverPassword.css
+++ b/ac-front-end/src/styles/Login/RecoverPassword.css
@@ -1,3 +1,6 @@
+/* CSS of RecoverPassword
+Authors:
+        A01777771 Stephen Strange*/
 /* Initials: rp */
 .rp-main-container {
   display: flex;
