--- a/ac-front-end/src/styles/Settings/Settings.css
+++ b/ac-front-end/src/styles/Settings/Settings.css
@@ -1,3 +1,6 @@
+/* CSS of Settings
+Authors:
+        A01777771 Stephen Strange*/
 .stngs-main-container {
   display: flex;
   flex-direction: column;
