--- a/ac-front-end/src/styles/AgentMain/AgentMain.css
+++ b/ac-front-end/src/styles/AgentMain/AgentMain.css
@@ -8,14 +8,14 @@ Authors:
   align-items: center;
   background-color: var(--main-card-background);
   border-radius: 10px;
-  height: 85vh;
+  min-height: 85vh;
   margin: 1rem 2rem 2rem 100px;
 }
 
 .agM-card-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
   flex-wrap: wrap;
   padding: 2rem 0 2rem 0;
