--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -9,10 +9,11 @@ Authors:
   color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
-  min-height: 65rem;
+  min-height: 50rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  flex-direction: column;
   padding: 1rem;
 }
 .tp-title {
@@ -37,9 +38,9 @@ Authors:
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1.5rem;
   flex-wrap: wrap;
-  padding: 2rem;
+  padding: 1.5rem;
   min-height: max-content;
 }
 .tp-label {
