--- a/ac-front-end/src/styles/AgentList/AgentListMenu.css
+++ b/ac-front-end/src/styles/AgentList/AgentListMenu.css
@@ -60,3 +60,13 @@ Authors:
   font-size: var(--sub-title);
   font-weight: bold;
 }
+
+/*Media queries for AgentMenu*/
+/*****************************/
+/* BELOW 47*16 = 752px (Smaller desktops) */
+/*****************************/
+@media (max-height: 47em) {
+  .aglm-search-container {
+    margin: 3.5rem 1rem 1rem 0;
+  }
+}
