--- a/ac-front-end/src/styles/AgentList/SingleAgent.css
+++ b/ac-front-end/src/styles/AgentList/SingleAgent.css
@@ -49,3 +49,22 @@ Authors:
   margin-right: 2rem;
   text-align: justify;
 }
+
+/*Media queries for SingleAgent*/
+/*****************************/
+/* BELOW 47*16 = 752px (Smaller desktops) */
+/*****************************/
+@media (max-height: 47em) {
+  .sa-main-container {
+    min-height: 45rem;
+  }
+}
+
+/*****************************/
+/* BELOW 42.5*16 = 680px (Very Small desktops) */
+/*****************************/
+@media (max-height: 42.5em) {
+  .sa-main-container {
+    min-height: 40rem;
+  }
+}
