--- a/ac-front-end/src/styles/AgentMain/AgentMain.css
+++ b/ac-front-end/src/styles/AgentMain/AgentMain.css
@@ -8,7 +8,7 @@ Authors:
   align-items: center;
   background-color: var(--main-card-background);
   border-radius: 10px;
-  min-height: 85vh;
+  height: 85vh;
   margin: 1rem 2rem 2rem 100px;
 }
 
