--- a/ac-front-end/src/styles/Recordings/Recordings.css
+++ b/ac-front-end/src/styles/Recordings/Recordings.css
@@ -94,3 +94,13 @@ Authors:
     font-size: 1.2rem;
   }
 }
+
+/*Media queries for AllAgentList*/
+/*****************************/
+/* BELOW 47*16 = 752px (Smaller desktops) */
+/*****************************/
+@media (max-height: 47em) {
+  .re-container {
+    gap: 2rem;
+  }
+}
