--- a/ac-front-end/src/styles/Recordings/RecordingsCard.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsCard.css
@@ -3,6 +3,11 @@ Authors:
         A01777771 Stephen Strange*/
 /* Initials: rec */
 
+.link {
+  text-decoration: none;
+  font-size: inherit;
+}
+
 .rec-main-container {
   width: 40rem;
   color: var(--text-color);
@@ -61,6 +66,14 @@ Authors:
   text-align: end;
 }
 
+.rec-agent-name-small {
+  font-size: 1.5rem;
+}
+
+.rec-agent-name-md {
+  font-size: 2rem;
+}
+
 .rec-date {
   font-size: 1.8rem;
   text-align: end;
@@ -93,38 +106,54 @@ Authors:
 }
 
 .card-declined {
-  color: red;
+  background-color: red;
 }
 .lost-card {
-  color: blue;
+  background-color: blue;
 }
 .stolen-card {
-  color: green;
+  background-color: green;
 }
 .cancel-card {
-  color: orange;
+  background-color: orange;
 }
 .credit-card {
-  color: grey;
+  background-color: grey;
 }
 .savings-account {
-  color: purple;
+  background-color: purple;
 }
-.assurance {
-  color: burlywood;
+.inssurance {
+  background-color: burlywood;
 }
 .withdrawal {
-  color: lightseagreen;
+  background-color: lightseagreen;
 }
 .loans {
-  color: palevioletred;
+  background-color: palevioletred;
 }
 .investments {
-  color: khaki;
+  background-color: khaki;
 }
 .problem-solved {
-  color: teal;
+  background-color: teal;
 }
 .problem-not-solved {
-  color: coral;
+  background-color: coral;
+}
+
+/*Media queries for AllAgentList*/
+/*****************************/
+/* BELOW 47*16 = 752px (Smaller desktops) */
+/*****************************/
+@media (max-height: 47em) {
+  .rec-main-container {
+    min-height: 10rem;
+  }
+
+  .rec-tag {
+    height: 4rem;
+    padding: 0 1rem;
+    font-size: 1.5rem;
+  }
 }
