progress in recordings context

--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -5,7 +5,7 @@ Authors:
 
 .tp-main-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 1.5rem;
