--- a/ac-front-end/src/styles/Tutorials/Tutorials.css
+++ b/ac-front-end/src/styles/Tutorials/Tutorials.css
@@ -45,7 +45,7 @@ span {
 
 .t-main-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 40rem;
