--- a/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
@@ -12,6 +12,7 @@ Authors:
   font-size: 1.5rem;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
   height: 60rem;
+  margin: 3rem 0 3rem 0;
 }
 
 .afc-container {
