--- a/ac-front-end/src/styles/AgentRecordings/AgentRecordings.css
+++ b/ac-front-end/src/styles/AgentRecordings/AgentRecordings.css
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: self-start;
+  width: 90%;
 }
 
 .arc-container {
