--- a/ac-front-end/src/styles/Tutorials/Tutorials.css
+++ b/ac-front-end/src/styles/Tutorials/Tutorials.css
@@ -53,7 +53,7 @@ span {
   color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
-  min-height: 70rem;
+  height: 65rem;
 }
 
 .t-title {
@@ -105,4 +105,20 @@ span {
 .t-pdf {
   width: "100%";
   height: "400px";
+}
+
+/*Media queries for Recordings*/
+/*****************************/
+/* BELOW 90*16 = 1450px (Smaller desktops) */
+/*****************************/
+@media (max-width: 90em) {
+  .rec-main-container {
+    width: 35rem;
+  }
+  .rec-agent-name {
+    font-size: 2rem;
+  }
+  .rec-score {
+    font-size: 1.8rem;
+  }
 }
