--- a/ac-front-end/src/styles/AgentMain/RecordScreen.css
+++ b/ac-front-end/src/styles/AgentMain/RecordScreen.css
@@ -1,6 +1,6 @@
 .rs-main-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 35rem;
@@ -8,7 +8,7 @@
   color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
-  min-height: 18rem;
+  height: 18rem;
   margin-top: 2rem;
 }
 .rs-sub-container {
@@ -27,7 +27,7 @@
   padding: 2rem;
   background-color: var(--sub-card-background);
   color: var(--text-color);
-  margin-top: 2rem;
+  margin-top: 0.5rem;
   border: none;
   border-radius: 10px;
   cursor: pointer;
