--- a/ac-front-end/src/styles/AgentQualityControl/AgentQualityControl.css
+++ b/ac-front-end/src/styles/AgentQualityControl/AgentQualityControl.css
@@ -2,29 +2,22 @@
 
 .aqc-main-container {
   display: flex;
-  justify-content: flex-end;
-  align-items: baseline;
+  justify-content: center;
+  align-items: center;
   background-color: var(--main-card-background);
   border-radius: 10px;
-  /* height: 85vh; */
-  gap: 2rem;
   margin: 1rem 2rem 2rem 100px;
-  position: relative;
-  flex-direction: row;
 }
 
 .aqc-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  column-gap: 3rem;
+  grid-template-columns: 1fr 30rem;
 }
 
 .aqc-feedback-card {
-  position: fixed;
-  /* position: sticky; */
-  z-index: 999;
-  margin: 20px;
-  /* width: 150px; */
-  /* overflow-y: scroll;
-  top: 0;
-  bottom: 0; */
+  position: sticky;
+  top: 13rem;
+  align-self: start;
+  justify-self: center;
 }
