--- a/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
@@ -11,13 +11,15 @@ Authors:
   overflow: hidden;
   font-size: 1.5rem;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
-  height: 60rem;
-  margin: 3rem 0 3rem 0;
+  /* height: 55rem; */
+  /* margin: 3rem 0 3rem 0; */
 }
 
 .afc-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 1rem;
   color: white;
   padding: 2rem;
