--- a/ac-front-end/src/styles/AgentRecordings/AgentRecordings.css
+++ b/ac-front-end/src/styles/AgentRecordings/AgentRecordings.css
@@ -19,24 +19,34 @@
 .arc-search-container {
   display: flex;
   grid-column: 1 / -1;
-  gap: 1.5rem;
+  /* gap: 1.5rem; */
   justify-self: end;
 }
 
 .arc-input {
   font-size: var(--option-text);
-  border-radius: 10px;
+  /* border-radius: 10px; */
   padding: 1rem 1rem 1rem 2rem;
+  border: none;
 }
 
-.arc-select {
+.arc-select,
+.arc-btn {
   font-size: var(--option-text);
   font-weight: bold;
   border-radius: 6px;
   border-color: transparent;
   padding: 1.2rem;
-  background-color: var(--sub-card-background);
+  /* background-color: var(--sub-card-background); */
+  border-radius: 10px 0 0 10px;
+  background-color: var(--highlight-color);
   color: var(--text-color);
+}
+
+.arc-btn {
+  color: white;
+  background-color: #415164;
+  border-radius: 0 10px 10px 0;
 }
 
 /*Media queries for Recordings*/
