--- a/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
@@ -5,8 +5,8 @@ Authors:
 
 .afc-main-container {
   width: 30rem;
-  color: white;
-  background-color: #415164;
+  color: var(--text-color);
+  background-color: var(--sub-card-background);
   border-radius: 10px;
   overflow: hidden;
   font-size: 1.5rem;
@@ -32,6 +32,7 @@ Authors:
 
 .afc-title {
   font-size: 3rem;
+  color: var(--text-color);
   text-align: center;
   margin-bottom: 1rem;
 }
@@ -67,6 +68,7 @@ Authors:
 }
 
 .afc-send-btn {
+  width: 100%;
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
