--- a/ac-front-end/src/styles/Dashboard/Dashboard.css
+++ b/ac-front-end/src/styles/Dashboard/Dashboard.css
@@ -4,21 +4,21 @@ Authors:
 /* Initials: dsb */
 
 .dsb-main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: var(--main-card-background);
-  margin: 2rem;
   border-radius: 10px;
   height: 85vh;
   margin: 1rem 2rem 2rem 100px;
 }
 
-.dsb-container {
+.dsb-card-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
-}
-
-
-.dsb {
-  align-content: left;
+  gap: 2rem;
+  flex-wrap: wrap;
+  padding: 2rem 0 2rem 0;
+  min-height: max-content;
 }
