--- a/ac-front-end/src/styles/Dashboard/SingleDashboard.css
+++ b/ac-front-end/src/styles/Dashboard/SingleDashboard.css
@@ -1,4 +1,4 @@
-.sdsb-main-container {
+.sdsb-main-container-dashboard {
     width: 85rem;
     background-color: var(--sub-card-background);
     color: var(--text-color);
@@ -10,7 +10,24 @@
     align-items: center;
   }
 
-  .sdsb-quicksight {
+  .sdsb-main-container-statistics {
+    width: 120rem;
+    background-color: var(--sub-card-background);
+    color: var(--text-color);
+    border-radius: 10px;
+    box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
+    height: 70rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .sdsb-quicksight-dashboard {
     width: 80rem;
     height: 60rem;
+  }
+
+  .sdsb-quicksight-statistics {
+    width: 115rem;
+    height: 65rem;
   }
