--- a/ac-front-end/src/styles/Recordings/AboutCard.css
+++ b/ac-front-end/src/styles/Recordings/AboutCard.css
@@ -6,10 +6,10 @@ Authors:
 .abc-main-container {
   width: 30rem;
   color: white;
-  background-color: #415164;
+  background-color: var(--sub-card-background);
   border-radius: 10px;
   overflow: hidden;
-  font-size: 1.5rem;
+  font-size: var(--sub-option-text);
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
   height: 60rem;
 }
@@ -18,23 +18,26 @@ Authors:
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  color: white;
+  color: var(--text-color);
   padding: 2rem;
 }
 
 .abc-navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  word-wrap: break-word;
+  word-break: keep-all;
+  width: 100%;
 }
 
 .abc-title {
-  font-size: 3rem;
+  font-size: var(--sub-option-text);
   text-align: center;
   margin-bottom: 1rem;
 }
 
 .abc-title:nth-child(2) {
-  color: #9facbd;
+  color: var(--highlight-color);
   cursor: pointer;
 }
 
@@ -48,14 +51,16 @@ Authors:
 }
 
 .abc-tag-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  grid-template-columns: auto;
   column-gap: 2rem;
   /* grid-auto-flow: column; */
-  justify-content: center;
+  justify-content: flex-start;
   row-gap: 1rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .abc-tag {
@@ -65,7 +70,7 @@ Authors:
   background-color: rgb(135, 42, 42);
   height: 4rem;
   padding: 0 1rem;
-  font-size: 1.5rem;
+  font-size: var(--sub-option-text);
   color: white;
   border-radius: 3px;
   cursor: pointer;
