--- a/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
@@ -62,9 +62,10 @@ Authors:
 .afc-feedback {
   height: 30rem;
   background-color: white;
-  color: black;
+  color: var(--text-color);
   padding: 1rem;
   border-radius: 10px;
+  border: 2px solid var(--highlight-color) !important;
 }
 
 .afc-send-btn {
@@ -72,10 +73,10 @@ Authors:
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
-  background-color: #9facbd;
+  background-color: var(--highlight-color);
   border-radius: 10px;
   padding: 1rem;
   cursor: pointer;
-  color: #e1e1e1;
+  color: var(--text-color);
   margin-top: 1rem;
 }
