--- a/ac-front-end/src/styles/Recordings/GiveFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/GiveFeedbackCard.css
@@ -6,10 +6,10 @@ Authors:
 .gfc-main-container {
   width: 30rem;
   color: white;
-  background-color: #415164;
+  background-color: var(--sub-card-background);
   border-radius: 10px;
   overflow: hidden;
-  font-size: 1.5rem;
+  font-size: var(--sub-option-text);
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
   height: 60rem;
 }
@@ -18,23 +18,26 @@ Authors:
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  color: white;
+  color: var(--text-color);
   padding: 2rem;
 }
 
 .gfc-navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  word-wrap: break-word;
+  word-break: keep-all;
+  width: 100%;
 }
 
 .gfc-title {
-  font-size: 3rem;
+  font-size: var(--sub-option-text);
   text-align: center;
   margin-bottom: 1rem;
 }
 
 .gfc-title:nth-child(1) {
-  color: #9facbd;
+  color: var(--highlight-color);
   cursor: pointer;
 }
 
@@ -55,6 +58,7 @@ Authors:
   border: none;
   font-size: 2rem;
   border-radius: 10px;
+  border: 2px solid var(--highlight-color) !important;
   /* transition: width 0.4s ease-in-out; */
 }
 
@@ -66,11 +70,11 @@ Authors:
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
-  background-color: #9facbd;
+  background-color: var(--highlight-color);
   border-radius: 10px;
   padding: 1rem;
   cursor: pointer;
-  color: #e1e1e1;
+  color: var(--text-color);
   margin-top: 1rem;
   border: none;
 }
