--- a/ac-front-end/src/styles/Recordings/RecordingsVideo.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsVideo.css
@@ -7,7 +7,7 @@ Authors:
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #132535;
+  background-color: var(--main-card-background);
   border-radius: 10px;
   margin: 1rem 2rem 2rem 100px;
   min-height: 85vh;
