--- a/ac-front-end/src/styles/AgentMain/RecordScreen.css
+++ b/ac-front-end/src/styles/AgentMain/RecordScreen.css
@@ -10,10 +10,20 @@
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
   height: 18rem;
   margin-top: 2rem;
+  position: relative;
+  transition: all 0.3s linear;
+  outline: solid 0px red;
 }
+
+.rs-recording {
+  /* .rs-main-container:hover { */
+  outline-width: 10px;
+}
+
 .rs-sub-container {
   width: 90%;
 }
+
 .rs-title {
   font-size: var(--sub-title);
   /* font-size: 3rem; */
@@ -21,6 +31,7 @@
   padding: 1rem;
   text-align: center;
 }
+
 .rs-button {
   font-size: 4rem;
   font-weight: bold;
@@ -31,4 +42,11 @@
   border: none;
   border-radius: 10px;
   cursor: pointer;
+}
+
+.rs-button-up {
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
 }
