--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -71,6 +71,62 @@ Authors:
   --offline-color-deuteranomaly: #d28668;
   --offline-color-tritanomaly: #ea6367;
 
+  --other-blue-default: #88c1d7;
+  --other-blue-protanopia: #a0a1d1;
+  --other-blue-deuteranopia: #9d99d0;
+  --other-blue-tritanopia: #8acdcc;
+  --other-blue-protanomaly: #92aed4;
+  --other-blue-deuteranomaly: #93b2d3;
+  --other-blue-tritanomaly: #89c6d2;
+
+  --other-dark-blue-default: #009afa;
+  --other-dark-blue-protanopia: #4244e2;
+  --other-dark-blue-deuteranopia: #392edd;
+  --other-dark-blue-tritanopia: #07d0cc;
+  --other-dark-blue-protanomaly: #1c66ee;
+  --other-dark-blue-deuteranomaly: #1e72ec;
+  --other-dark-blue-tritanomaly: #05b3e8;
+
+  --other-yellow-default: #f9f871;
+  --other-yellow-protanopia: #f8f891;
+  --other-yellow-deuteranopia: #f8f899;
+  --other-yellow-tritanopia: #f8abb1;
+  --other-yellow-protanomaly: #f8f881;
+  --other-yellow-deuteranomaly: #f8f884;
+  --other-yellow-tritanomaly: #f8d389;
+
+  --other-pink-default: #d89c99;
+  --other-pink-protanopia: #bebd99;
+  --other-pink-deuteranopia: #c1c699;
+  --other-pink-tritanopia: #d59a9a;
+  --other-pink-protanomaly: #cdaf99;
+  --other-pink-deuteranomaly: #ccab99;
+  --other-pink-tritanomaly: #d69b99;
+
+  --other-orange-default: #e19e20;
+  --other-orange-protanopia: #c3c33e;
+  --other-orange-deuteranopia: #c7cc45;
+  --other-orange-tritanopia: #dd565b;
+  --other-orange-protanomaly: #d4b42f;
+  --other-orange-deuteranomaly: #d3af31;
+  --other-orange-tritanomaly: #de7c37;
+
+  --other-purple-default: #814f68;
+  --other-purple-protanopia: #6b6a61;
+  --other-purple-deuteranopia: #6e7260;
+  --other-purple-tritanopia: #7e5d5c;
+  --other-purple-protanomaly: #775f64;
+  --other-purple-deuteranomaly: #775b64;
+  --other-purple-tritanomaly: #7f5563;
+
+  --other-brown-default: #714437;
+  --other-brown-protanopia: #5d5d3a;
+  --other-brown-deuteranopia: #60633a;
+  --other-brown-tritanopia: #6e3c3d;
+  --other-brown-protanomaly: #685238;
+  --other-brown-deuteranomaly: #684f38;
+  --other-brown-tritanomaly: #6f4039;
+
   --h1-title-medium: 5rem;
   --h1-title-small: 3rem;
   --h1-title-big: 7rem;
@@ -109,6 +165,13 @@ body.dark {
   --online-color: var(--online-color-default);
   --offline-color: var(--offline-color-default);
   --logo-bbva: var(--logo-bbva-dark);
+  --other-blue-color: var(--other-blue-default);
+  --other-dark-blue-color: var(--other-dark-blue-default);
+  --other-yellow-color: var(--other-yellow-default);
+  --other-pink-color: var(--other-pink-default);
+  --other-orange-color: var(--other-orange-default);
+  --other-purple-color: var(--other-purple-default);
+  --other-brown-color: var(--other-brown-default);
 }
 body.light {
   --background-color: var(--background-light);
@@ -119,6 +182,13 @@ body.light {
   --online-color: var(--online-color-default);
   --offline-color: var(--offline-color-default);
   --logo-bbva: var(--logo-bbva-light);
+  --other-blue-color: var(--other-blue-default);
+  --other-dark-blue-color: var(--other-dark-blue-default);
+  --other-yellow-color: var(--other-yellow-default);
+  --other-pink-color: var(--other-pink-default);
+  --other-orange-color: var(--other-orange-default);
+  --other-purple-color: var(--other-purple-default);
+  --other-brown-color: var(--other-brown-default);
 }
 body.dark_protanopia {
   --background-color: var(--background-dark-protanopia);
@@ -129,6 +199,13 @@ body.dark_protanopia {
   --online-color: var(--online-color-protanopia);
   --offline-color: var(--offline-color-protanopia);
   --logo-bbva: var(--logo-bbva-dark);
+  --other-blue-color: var(--other-blue-protanopia);
+  --other-dark-blue-color: var(--other-dark-blue-protanopia);
+  --other-yellow-color: var(--other-yellow-protanopia);
+  --other-pink-color: var(--other-pink-protanopia);
+  --other-orange-color: var(--other-orange-protanopia);
+  --other-purple-color: var(--other-purple-protanopia);
+  --other-brown-color: var(--other-brown-protanopia);
 }
 body.dark_deuteranopia {
   --background-color: var(--background-dark-deuteranopia);
@@ -139,6 +216,13 @@ body.dark_deuteranopia {
   --online-color: var(--online-color-deuteranopia);
   --offline-color: var(--offline-color-deuteranopia);
   --logo-bbva: var(--logo-bbva-dark);
+  --other-blue-color: var(--other-blue-deuteranopia);
+  --other-dark-blue-color: var(--other-dark-blue-deuteranopia);
+  --other-yellow-color: var(--other-yellow-deuteranopia);
+  --other-pink-color: var(--other-pink-deuteranopia);
+  --other-orange-color: var(--other-orange-deuteranopia);
+  --other-purple-color: var(--other-purple-deuteranopia);
+  --other-brown-color: var(--other-brown-deuteranopia);
 }
 body.dark_tritanopia {
   --background-color: var(--background-dark-tritanopia);
@@ -149,6 +233,13 @@ body.dark_tritanopia {
   --online-color: var(--online-color-tritanopia);
   --offline-color: var(--offline-color-tritanopia);
   --logo-bbva: var(--logo-bbva-dark);
+  --other-blue-color: var(--other-blue-tritanopia);
+  --other-dark-blue-color: var(--other-dark-blue-tritanopia);
+  --other-yellow-color: var(--other-yellow-tritanopia);
+  --other-pink-color: var(--other-pink-tritanopia);
+  --other-orange-color: var(--other-orange-tritanopia);
+  --other-purple-color: var(--other-purple-tritanopia);
+  --other-brown-color: var(--other-brown-tritanopia);
 }
 body.dark_protanomaly {
   --background-color: var(--background-dark-protanomaly);
@@ -159,6 +250,13 @@ body.dark_protanomaly {
   --online-color: var(--online-color-protanomaly);
   --offline-color: var(--offline-color-protanomaly);
   --logo-bbva: var(--logo-bbva-dark);
+  --other-blue-color: var(--other-blue-protanomaly);
+  --other-dark-blue-color: var(--other-dark-blue-protanomaly);
+  --other-yellow-color: var(--other-yellow-protanomaly);
+  --other-pink-color: var(--other-pink-protanomaly);
+  --other-orange-color: var(--other-orange-protanomaly);
+  --other-purple-color: var(--other-purple-protanomaly);
+  --other-brown-color: var(--other-brown-protanomaly);
 }
 body.dark_deuteranomaly {
   --background-color: var(--background-dark-deuteranomaly);
@@ -169,6 +267,13 @@ body.dark_deuteranomaly {
   --online-color: var(--online-color-deuteranomaly);
   --offline-color: var(--offline-color-deuteranomaly);
   --logo-bbva: var(--logo-bbva-dark);
+  --other-blue-color: var(--other-blue-deuteranomaly);
+  --other-dark-blue-color: var(--other-dark-blue-deuteranomaly);
+  --other-yellow-color: var(--other-yellow-deuteranomaly);
+  --other-pink-color: var(--other-pink-deuteranomaly);
+  --other-orange-color: var(--other-orange-deuteranomaly);
+  --other-purple-color: var(--other-purple-deuteranomaly);
+  --other-brown-color: var(--other-brown-deuteranomaly);
 }
 body.dark_tritanomaly {
   --background-color: var(--background-dark-tritanomaly);
@@ -179,6 +284,13 @@ body.dark_tritanomaly {
   --online-color: var(--online-color-tritanomaly);
   --offline-color: var(--offline-color-tritanomaly);
   --logo-bbva: var(--logo-bbva-dark);
+  --other-blue-color: var(--other-blue-tritanomaly);
+  --other-dark-blue-color: var(--other-dark-blue-tritanomaly);
+  --other-yellow-color: var(--other-yellow-tritanomaly);
+  --other-pink-color: var(--other-pink-tritanomaly);
+  --other-orange-color: var(--other-orange-tritanomaly);
+  --other-purple-color: var(--other-purple-tritanomaly);
+  --other-brown-color: var(--other-brown-tritanomaly);
 }
 body.small {
   --h1-title: var(--h1-title-small);
