--- a/ac-front-end/src/styles/Login/LoginForm.css
+++ b/ac-front-end/src/styles/Login/LoginForm.css
@@ -18,11 +18,17 @@ Authors:
   font-weight: bold;
   padding: 1rem;
   background-color: var(--highlight-color);
-  color: var(--text-color);
+  color: var(--text-color-dark);
   margin-top: 2rem;
   border: none;
   border-radius: 10px;
   cursor: pointer;
+}
+.lgf-button:hover {
+  transform: translateY(-3px);
+  transition: 0.3s ease-out;
+  opacity: 0.9;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .lgf-label {
@@ -37,8 +43,8 @@ Authors:
   justify-content: center;
 
   width: 40rem;
-  background-color: var(--sub-card-background);
-  color: var(--text-color);
+  background-color: var(--sub-card-dark);
+  color: var(--text-color-dark);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
   min-height: 35rem;
