--- a/ac-front-end/src/styles/Login/NewPassword.css
+++ b/ac-front-end/src/styles/Login/NewPassword.css
@@ -8,7 +8,7 @@ Authors:
   justify-content: center;
   align-items: center;
   height: 95vh;
-  background-color: var(--main-card-background);
+  background-color: var(--main-card-dark);
   margin: 2rem;
   border-radius: 10px;
 }
