Hover on small buttons added & restore to default button in settings

--- a/ac-front-end/src/styles/Login/LoginForm.css
+++ b/ac-front-end/src/styles/Login/LoginForm.css
@@ -80,6 +80,10 @@ Authors:
   text-decoration: none;
 }
 
+.lgf-forgot-text:hover {
+  text-decoration: underline var(--text-color-dark);
+}
+
 .lgf-margin-bottom-sm {
   margin-bottom: 0.6rem;
 }
