--- a/ac-front-end/src/styles/Settings/Settings.css
+++ b/ac-front-end/src/styles/Settings/Settings.css
@@ -37,3 +37,18 @@ Authors:
   background-color: var(--sub-card-background);
   color: var(--text-color);
 }
+.stngs-restore-container {
+  padding: 2rem;
+}
+.stngs-restore-btn {
+  align-self: flex-end;
+  font-size: var(--sub-option-text);
+  color: var(--text-color);
+  background-color: var(--main-card-background);
+  border: none;
+  cursor: pointer;
+}
+
+.stngs-restore-btn:hover {
+  text-decoration: underline var(--text-color);
+}
