--- a/ac-front-end/src/styles/Recordings/GiveFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/GiveFeedbackCard.css
@@ -78,3 +78,9 @@ Authors:
   margin-top: 1rem;
   border: none;
 }
+.gfc-send-btn:hover {
+  transform: translateY(-3px);
+  transition: 0.3s ease-out;
+  opacity: 0.9;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
