Added new icon & deleted recording screen buttons

--- a/ac-front-end/src/styles/Tutorials/Tutorials.css
+++ b/ac-front-end/src/styles/Tutorials/Tutorials.css
@@ -82,7 +82,7 @@ span {
   font-size: 2rem;
   font-weight: bold;
   display: flex;
-  background-color: #9facbd;
+  background-color: var(--highlight-color);
   color: #ffff;
   border: none;
   border-radius: 10px;
