Connection to RegisterNewUser
Co-Authored-By: Jared Flores <90533617+JaredFG@users.noreply.github.com>

--- a/ac-front-end/src/styles/Login/LoginForm.css
+++ b/ac-front-end/src/styles/Login/LoginForm.css
@@ -86,7 +86,9 @@ Authors:
   color: inherit;
   text-decoration: none;
 }
-
+.lgf-register-text:hover {
+  text-decoration: underline var(--text-color-dark);
+}
 .lgf-forgot-text:hover {
   text-decoration: underline var(--text-color-dark);
 }
