--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -172,6 +172,8 @@ Authors:
   border-radius: 10px;
   align-items: center;
   justify-content: center;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 .tp-confirmation-button {
   width: 15rem;
