--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -174,6 +174,8 @@ Authors:
   justify-content: center;
   word-break: break-all;
   word-wrap: break-word;
+  flex-direction: column;
+  gap: 1rem;
 }
 .tp-confirmation-button {
   width: 15rem;
@@ -184,6 +186,10 @@ Authors:
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.tp-order-list {
+  display: flex;
+  flex-direction: column;
 }
 /*****************************/
 /* BELOW 50*16 = 800px (Smaller desktops) */
