--- a/ac-front-end/src/styles/Recordings/RecordingsVideo.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsVideo.css
@@ -16,10 +16,27 @@ Authors:
 .rev-container {
   display: flex;
   padding: 3rem;
-  align-items: center;
+  align-items: flex-start;
   column-gap: 3rem;
 }
-
+.rev-sub-left-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.return-btn {
+  font-size: var(--option-text);
+  font-weight: 700;
+  background-color: var(--highlight-color);
+  border-radius: 8px;
+  padding: 1rem;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--text-color);
+  margin-bottom: 1rem;
+  border: none;
+}
 .rev-video {
   width: 100rem;
   height: 60rem;
