Fixed Glitch that made theme white

--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -1,6 +1,6 @@
 /* CSS of Index
 Authors:
-        A01777771 Stephen Strange*/
+        A01378688 Daniel Garcia Barajas
 
 /* Import Amazon Ember Font*/
 @import url("https://cdn.jsdelivr.net/gh/GoCloudHub/font-amazon-ember/fonts/amazonember/amazonember.css");
