--- a/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
@@ -62,10 +62,12 @@ Authors:
 .afc-feedback {
   height: 30rem;
   background-color: white;
-  color: var(--text-color);
+  /* color: var(--text-color); */
+  color: black;
   padding: 1rem;
   border-radius: 10px;
   border: 2px solid var(--highlight-color) !important;
+  width: 100%;
 }
 
 .afc-send-btn {
