--- a/ac-front-end/src/styles/AgentRecordings/AgentRecordings.css
+++ b/ac-front-end/src/styles/AgentRecordings/AgentRecordings.css
@@ -44,9 +44,10 @@
 }
 
 .arc-btn {
-  color: white;
-  background-color: #415164;
+  color: var(--text-color);
+  background-color: var(--sub-card-background);
   border-radius: 0 10px 10px 0;
+  cursor: pointer;
 }
 
 /*Media queries for Recordings*/
