--- a/ac-front-end/src/styles/Login/LoginForm.css
+++ b/ac-front-end/src/styles/Login/LoginForm.css
@@ -53,6 +53,36 @@ Authors:
 .lgf-container {
   padding: 3rem;
 }
+.lgf-ver-container {
+  display: flex;
+  padding: 3rem;
+  align-items: center;
+}
+.lgf-ver-in-container {
+  display: list-item;
+  padding: 3rem;
+  gap: 2rem;
+}
+.lgf-ver-in {
+  margin-top: 2rem;
+  width: 20rem;
+  border: none;
+  font-size: 2rem;
+  border-radius: 10px;
+  padding: 1rem;
+}
+.lgf-ver-sub {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 1rem;
+  background-color: var(--highlight-color-default);
+  color: var(--text-color-dark);
+  margin-top: 2rem;
+  width: 20rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
 
 .lgf-form {
   width: 100%;
