--- a/ac-front-end/src/styles/Login/LoginForm.css
+++ b/ac-front-end/src/styles/Login/LoginForm.css
@@ -59,7 +59,6 @@ Authors:
   align-items: center;
 }
 .lgf-ver-in-container {
-  display: list-item;
   padding: 3rem;
   gap: 2rem;
 }
@@ -110,6 +109,13 @@ Authors:
   text-decoration: none;
 }
 .lgf-register-text {
+  text-align: right;
+  margin-bottom: 0.8rem;
+  font-size: 1.2rem;
+  color: inherit;
+  text-decoration: none;
+}
+.lgf-exit-text {
   text-align: right;
   margin-bottom: 0.8rem;
   font-size: 1.2rem;
