--- a/ac-front-end/src/styles/Login/NewPasswordForm.css
+++ b/ac-front-end/src/styles/Login/NewPasswordForm.css
@@ -15,7 +15,7 @@ Authors:
   font-size: 2rem;
   font-weight: bold;
   padding: 1rem;
-  background-color: var(--highlight-color);
+  background-color: var(--highlight-color-default);
   color: var(--text-color-dark);
   margin-top: 2rem;
   border: none;
