--- a/ac-front-end/src/styles/Recordings/AboutCard.css
+++ b/ac-front-end/src/styles/Recordings/AboutCard.css
@@ -31,7 +31,7 @@ Authors:
 }
 
 .abc-title {
-  font-size: var(--sub-option-text);
+  font-size: var(--option-text);
   text-align: center;
   margin-bottom: 1rem;
 }
